--- a/package.json
+++ b/package.json
@@ -1,21 +1,56 @@
 {
-  "name": "Wasel-backend",
+  "name": "wasel-frontend",
   "version": "1.0.0",
-  "description": "Express backend for Wasel",
-  "main": "server.js",
-  "type": "commonjs",
+  "private": true,
+  "description": "Frontend application for Wasel. Built with React and Vite.",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "crypto-browserify": "^3.12.1",
+    "express": "^5.1.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@csstools/selector-specificity": "^5.0.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@vitejs/plugin-react": "^4.6.0",
+    "postcss": "^8.5.6",
+    "postcss-selector-parser": "^7.1.0",
+    "react-app-rewired": "^2.2.1",
+    "rollup": "^4.44.1",
+    "typescript": "^4.9.5",
+    "vite": "^7.0.0"
   },
-  "license": "MIT",
-  "keywords": [],
-  "author": ""
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
+
+ 
