--- a/package.json
+++ b/package.json
@@ -2,26 +2,22 @@
   "name": "wasel-frontend",
   "version": "1.0.0",
   "private": true,
-  "description": "Frontend application for Wasel. Built with React and Vite.",
+  "description": "Frontend Wasel",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
-    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "express": "^5.1.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.4",
     "util": "^0.12.5"
@@ -34,10 +30,11 @@
     "@vitejs/plugin-react": "^4.6.0",
     "postcss": "^8.5.6",
     "postcss-selector-parser": "^7.1.0",
-    "react-app-rewired": "^2.2.1",
     "rollup": "^4.44.1",
     "typescript": "^4.9.5",
-    "vite": "^7.0.0"
+    "vite": "^7.0.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vitest": "^3.2.4"
   },
   "browserslist": {
     "production": [
@@ -52,5 +49,3 @@
     ]
   }
 }
-
- 
