--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
-  "name": "wasel-frontend",
+  "name": "Wasel-backend",
   "version": "1.0.0",
-  "private": true,
-  "description": "Frontend Wasel",
+  "description": "Express backend for Wasel",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.27.1",
-    "@csstools/selector-specificity": "^5.0.0",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@vitejs/plugin-react": "^4.6.0",
-    "postcss": "^8.5.6",
-    "postcss-selector-parser": "^7.1.0",
-    "rollup": "^4.44.1",
-    "typescript": "^4.9.5",
-    "vite": "^7.0.4",
-    "vite-plugin-node-polyfills": "^0.24.0",
-    "vitest": "^3.2.4"
+    "nodemon": "^3.1.10"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "license": "MIT",
+  "keywords": [],
+  "author": ""
 }
