--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@csstools/selector-specificity": "^5.0.0",
     "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
     "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "license": "MIT",
