--- a/package.json
+++ b/package.json
@@ -1,31 +1,71 @@
 {
-  "name": "Wasel-backend",
+  "name": "wasel-frontend",
   "version": "1.0.0",
-  "description": "Express backend for Wasel",
-  "main": "server.js",
-  "type": "commonjs",
+  "private": true,
+  "description": "Frontend Wasel",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "^0.0.0",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@csstools/selector-specificity": "^5.0.0",
-    "nodemon": "^3.1.10",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react": "^4.6.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
-    "rollup-plugin-node-polyfills": "^0.2.1"
+    "postcss-selector-parser": "^7.1.0",
+    "rollup": "^4.44.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "typescript": "^4.9.5",
+    "vite": "^7.0.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vitest": "^3.2.4"
   },
-  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YOUR_USERNAME/wasel-frontend.git"
+  },
   "keywords": [],
-  "author": ""
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/YOUR_USERNAME/wasel-frontend/issues"
+  },
+  "homepage": "https://github.com/YOUR_USERNAME/wasel-frontend#readme"
 }
